--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,21 +1,18 @@
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 10s linear;
-  }
-}
-
 .App-header {
-  min-height: 10vh;
   font-size: calc(10px + 2vmin);
 }
 
 .App-body {
-  min-height: 90vh;
+  margin-top: 58px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+}
+
+.App-body-public {
+  min-height: 100vh;
   display: flex;
   display: flex;
   flex-direction: column;
@@ -24,16 +21,3 @@
   font-size: calc(10px + 2vmin);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
-}
